removed old broken rnn code from stl_rnn notebook

--- a/notebooks/stl_rnn.ipynb
+++ b/notebooks/stl_rnn.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "The goal of this notebook is to convert the char RNN example from the rnn_examples notebook into one that can process STL files.\n",
     "\n",
-    "Converting proved difficult, so we borrowed some inspiration and code from https://github.com/subpath/Keras_music_gereration/blob/master/Music%20gerenation%20with%20Keras%20and%20TF.ipynb"
+    "Unfortunately, reusing code from the rnn_examples notebook did not work out as well as hoped. It did, however, serve as a quality learning exercise. The rnn_examples model is based on discrete input: language where each word is an indexed token. That leads to problems with our model as our input is continuous: each stl file has vertices that can be any real number.\n",
+    "\n",
+    "After a continuous example was located, Converting proved difficult, so we borrowed some inspiration and code from https://github.com/subpath/Keras_music_gereration/blob/master/Music%20gerenation%20with%20Keras%20and%20TF.ipynb"
    ]
   },
   {
@@ -87,277 +89,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(0.42292082, shape=(), dtype=float32)\n",
-      "tf.Tensor(0.5453869, shape=(), dtype=float32)\n",
-      "tf.Tensor(0.60241675, shape=(), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#### For Triangles\n",
-    "#tri_dataset = tf.data.Dataset.from_generator(\n",
-    "#    thingi.triangle_batchmaker,\n",
-    "#    output_types=tuple(([np.float32]*9)),\n",
-    "#)\n",
-    "\n",
-    "#for i, tri in enumerate(tri_dataset.take(3)):\n",
-    "#    print('Triangle {}'.format(i))\n",
-    "#    for vtx in tri:\n",
-    "#        print(vtx)\n",
-    "\n",
-    "### For Vertices\n",
-    "vtx_dataset = tf.data.Dataset.from_generator(\n",
-    "    thingi.vertex_batchmaker,\n",
-    "    output_types=(np.float32),\n",
-    ")\n",
-    "\n",
-    "for v in vtx_dataset.take(3):\n",
-    "    print(v)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(27,)\n",
-      "tf.Tensor(\n",
-      "[0.42292082 0.5453869  0.60241675 0.4233776  0.544988   0.60241675\n",
-      " 0.42399296 0.5444503  0.60241675 0.42399296 0.5444503  0.6092169\n",
-      " 0.42292082 0.5453869  0.6092169  0.42399296 0.5444503  0.60241675\n",
-      " 0.42292082 0.5453869  0.6092169  0.41808274 0.55827796 0.6092169\n",
-      " 0.42193684 0.546416   0.6092169 ], shape=(27,), dtype=float32)\n",
-      "(27,)\n",
-      "tf.Tensor(\n",
-      "[0.4210492  0.54752916 0.6092169  0.42193684 0.546416   0.60241675\n",
-      " 0.42193684 0.546416   0.6092169  0.4210492  0.54752916 0.60241675\n",
-      " 0.42193684 0.546416   0.59879    0.42193684 0.546416   0.60241675\n",
-      " 0.41808274 0.5554332  0.59879    0.42292082 0.5453869  0.59879\n",
-      " 0.42193684 0.546416   0.59879   ], shape=(27,), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "seq_length = 27\n",
-    "#assert seq_length % 9 == 0\n",
-    "\n",
-    "#sequences = tri_dataset.batch(seq_length+1, drop_remainder=True)\n",
-    "sequences = vtx_dataset.batch(seq_length, drop_remainder=True)\n",
-    "\n",
-    "for tri_list in sequences.take(2):\n",
-    "    # each tri_list is a list of seq_length+1 triangles\n",
-    "    print(tri_list.shape)\n",
-    "    print(tri_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<MapDataset shapes: ((99,), (99,)), types: (tf.float32, tf.float32)>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def split_input_target(chunk):\n",
-    "    input_text = chunk[:-1]\n",
-    "    target_text = chunk[1:]\n",
-    "    # THANK YOU https://stackoverflow.com/questions/48823848/dataset-api-does-not-pass-dimensionality-information-for-its-output-tensor-when\n",
-    "    input_text.set_shape((99))\n",
-    "    target_text.set_shape((99))\n",
-    "    return input_text, target_text\n",
-    "\n",
-    "dataset = sequences.map(split_input_target)\n",
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(99,)\n",
-      "Input data:  tf.Tensor(\n",
-      "[0.42292082 0.5453869  0.60241675 0.4233776  0.544988   0.60241675\n",
-      " 0.42399296 0.5444503  0.60241675 0.42399296 0.5444503  0.6092169\n",
-      " 0.42292082 0.5453869  0.6092169  0.42399296 0.5444503  0.60241675\n",
-      " 0.42292082 0.5453869  0.6092169  0.41808274 0.55827796 0.6092169\n",
-      " 0.42193684 0.546416   0.6092169  0.4210492  0.54752916 0.6092169\n",
-      " 0.42193684 0.546416   0.60241675 0.42193684 0.546416   0.6092169\n",
-      " 0.4210492  0.54752916 0.60241675 0.42193684 0.546416   0.59879\n",
-      " 0.42193684 0.546416   0.60241675 0.41808274 0.5554332  0.59879\n",
-      " 0.42292082 0.5453869  0.59879    0.42193684 0.546416   0.59879\n",
-      " 0.41808274 0.5554332  0.59879    0.42588705 0.5431698  0.59879\n",
-      " 0.42514473 0.54361343 0.59879    0.42514473 0.54361343 0.60241675\n",
-      " 0.42514473 0.54361343 0.59879    0.42588705 0.5431698  0.59879\n",
-      " 0.42514473 0.54361343 0.60241675 0.42588705 0.5431698  0.60241675\n",
-      " 0.42636693 0.5428831  0.60241675 0.42636693 0.5428831  0.60241675\n",
-      " 0.42636693 0.5428831  0.59879    0.4276497  0.54226536 0.59879\n",
-      " 0.4276497  0.54226536 0.6044568  0.42728654 0.5424404  0.60241675\n",
-      " 0.4276497  0.54226536 0.59879   ], shape=(99,), dtype=float32)\n",
-      "(99,)\n",
-      "Target data: tf.Tensor(\n",
-      "[0.5453869  0.60241675 0.4233776  0.544988   0.60241675 0.42399296\n",
-      " 0.5444503  0.60241675 0.42399296 0.5444503  0.6092169  0.42292082\n",
-      " 0.5453869  0.6092169  0.42399296 0.5444503  0.60241675 0.42292082\n",
-      " 0.5453869  0.6092169  0.41808274 0.55827796 0.6092169  0.42193684\n",
-      " 0.546416   0.6092169  0.4210492  0.54752916 0.6092169  0.42193684\n",
-      " 0.546416   0.60241675 0.42193684 0.546416   0.6092169  0.4210492\n",
-      " 0.54752916 0.60241675 0.42193684 0.546416   0.59879    0.42193684\n",
-      " 0.546416   0.60241675 0.41808274 0.5554332  0.59879    0.42292082\n",
-      " 0.5453869  0.59879    0.42193684 0.546416   0.59879    0.41808274\n",
-      " 0.5554332  0.59879    0.42588705 0.5431698  0.59879    0.42514473\n",
-      " 0.54361343 0.59879    0.42514473 0.54361343 0.60241675 0.42514473\n",
-      " 0.54361343 0.59879    0.42588705 0.5431698  0.59879    0.42514473\n",
-      " 0.54361343 0.60241675 0.42588705 0.5431698  0.60241675 0.42636693\n",
-      " 0.5428831  0.60241675 0.42636693 0.5428831  0.60241675 0.42636693\n",
-      " 0.5428831  0.59879    0.4276497  0.54226536 0.59879    0.4276497\n",
-      " 0.54226536 0.6044568  0.42728654 0.5424404  0.60241675 0.4276497\n",
-      " 0.54226536 0.59879    0.4272455 ], shape=(99,), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for input_example, target_example in dataset.take(1):\n",
-    "    print(input_example.shape)\n",
-    "    print('Input data: ', input_example)\n",
-    "    print(target_example.shape)\n",
-    "    print('Target data:', target_example)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step    0\n",
-      "  input: 0.422920823097229\n",
-      "  expected output: 0.5453869104385376\n",
-      "Step    1\n",
-      "  input: 0.5453869104385376\n",
-      "  expected output: 0.6024167537689209\n",
-      "Step    2\n",
-      "  input: 0.6024167537689209\n",
-      "  expected output: 0.4233776032924652\n",
-      "Step    3\n",
-      "  input: 0.4233776032924652\n",
-      "  expected output: 0.5449879765510559\n",
-      "Step    4\n",
-      "  input: 0.5449879765510559\n",
-      "  expected output: 0.6024167537689209\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, (input_idx, target_idx) in enumerate(zip(input_example[:5], target_example[:5])):\n",
-    "    print(\"Step {:4d}\".format(i))\n",
-    "    print(\"  input: {}\".format(input_idx))\n",
-    "    print(\"  expected output: {}\".format(target_idx))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create Training Batches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<BatchDataset shapes: ((64, 99), (64, 99)), types: (tf.float32, tf.float32)>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Batch size \n",
-    "BATCH_SIZE = 64\n",
-    "\n",
-    "# Buffer size to shuffle the dataset\n",
-    "# (TF data is designed to work with possibly infinite sequences, \n",
-    "# so it doesn't attempt to shuffle the entire sequence in memory. Instead, \n",
-    "# it maintains a buffer in which it shuffles elements).\n",
-    "BUFFER_SIZE = 10000\n",
-    "\n",
-    "dataset = dataset.shuffle(BUFFER_SIZE).batch(BATCH_SIZE, drop_remainder=True)\n",
-    "\n",
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Build The Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Length of the vocabulary in chars\n",
-    "vocab_size = 1000\n",
-    "\n",
-    "# The embedding dimension \n",
-    "embedding_dim = 256\n",
-    "\n",
-    "# Number of RNN units\n",
-    "rnn_units = 1024"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if tf.test.is_gpu_available():\n",
-    "    rnn = tf.keras.layers.CuDNNGRU\n",
-    "else:\n",
-    "    import functools\n",
-    "    rnn = functools.partial(tf.keras.layers.GRU, recurrent_activation='sigmoid')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [
@@ -400,6 +131,13 @@
     "assert np.array_equal(X[1][-1], Y[0])\n",
     "\n",
     "#dataset = zip(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build The Model"
    ]
   },
   {
@@ -533,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make A Prediction"
+    "## Make A Prediction"
    ]
   },
   {
