--- a/notebooks/1D-VAE-GAN_ch.ipynb
+++ b/notebooks/1D-VAE-GAN_ch.ipynb
@@ -165,25 +165,25 @@
    "source": [
     "## first test our 1-d input, filter size uses 3 not 4?\n",
     "def encoder(x, keep_prob=0.5, isTrain=True):\n",
-    "    with tf.variable_scope(\"encoder\", reuse=tf.AUTO_REUSE):  # 64 * 64 * 4\n",
+    "    with tf.variable_scope(\"encoder\", reuse=tf.AUTO_REUSE): \n",
     "        conv1 = tf.layers.conv1d(x, 128, [4], strides=2, padding='same'\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # 32 * 32 * 128\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer()) \n",
     "        lrelu1 = tf.nn.elu(conv1)\n",
     "\n",
     "        conv2 = tf.layers.conv1d(lrelu1, 256, [4], strides=2, padding='same'\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # 16 * 16 *256\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer()) \n",
     "        lrelu2 = tf.nn.elu(tf.layers.batch_normalization(conv2, training=isTrain))\n",
     "        \n",
     "        conv3 = tf.layers.conv1d(lrelu2, 512, [4], strides=2, padding='same'\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # 8 * 8 * 512\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "        lrelu3 = tf.nn.elu(tf.layers.batch_normalization(conv3, training=isTrain))\n",
     "\n",
     "        conv4 = tf.layers.conv1d(lrelu3, 1024, [4], strides=2, padding='same'\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # 4 * 4 * 1024\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer()) \n",
     "        lrelu4 = tf.nn.elu(tf.layers.batch_normalization(conv4, training=isTrain))\n",
     "\n",
     "        conv5 = tf.layers.conv1d(lrelu4, 32, [4], strides=2, padding='valid'\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # 1 * 1 * 32\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "        lrelu5 = tf.nn.elu(tf.layers.batch_normalization(conv5, training=isTrain))\n",
     "\n",
     "        x = tf.nn.dropout(lrelu5, keep_prob)\n",
@@ -218,27 +218,27 @@
     "#     with tf.variable_scope('generator', reuse=tf.AUTO_REUSE):\n",
     "#         # 1st hidden layer\n",
     "#         conv1 = tf.layers.conv1d(x, 256, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 2, 2, 2, 256)\n",
+    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "#         lrelu1 = tf.nn.elu(tf.layers.batch_normalization(conv1, training=isTrain))\n",
     "\n",
     "#         # 2nd hidden layer\n",
     "#         conv2 = tf.layers.conv1d(lrelu1, 128, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer()) # (-1, 4, 4, 4, 128)\n",
+    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer()) \n",
     "#         lrelu2 = tf.nn.elu(tf.layers.batch_normalization(conv2, training=isTrain))\n",
     "\n",
     "#         # 3rd hidden layer\n",
     "#         conv3 = tf.layers.conv1d(lrelu2, 64, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 8, 8, 8, 64)\n",
+    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "#         lrelu3 = tf.nn.elu(tf.layers.batch_normalization(conv3, training=isTrain))\n",
     "\n",
     "#         # 4th hidden layer\n",
     "#         conv4 = tf.layers.conv1d(lrelu3, 32, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 16, 16, 16, 32)\n",
+    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "#         lrelu4 = tf.nn.elu(tf.layers.batch_normalization(conv4, training=isTrain))\n",
     "\n",
     "#         # output layer\n",
     "# #         conv5 = tf.layers.conv1d(lrelu4, 1, [2], strides=1, padding='valid', use_bias=False\n",
-    "# #                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 32, 32, 32, 1)\n",
+    "# #                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "# #         o = tf.nn.tanh(conv5)\n",
     "#         o = tf.nn.tanh(lrelu4)\n",
     "        \n",
@@ -263,7 +263,7 @@
     "        G_W1 = tf.Variable(xavier_init([n_latent, 128]))\n",
     "        G_b1 = tf.Variable(tf.zeros(shape=[128]))\n",
     "\n",
-    "        G_W2 = tf.Variable(xavier_init([128, n_input])) # which dimension shall i use for the 2nd? try different numbers?\n",
+    "        G_W2 = tf.Variable(xavier_init([128, n_input])) \n",
     "        G_b2 = tf.Variable(tf.zeros(shape=[n_input]))\n",
     "\n",
     "        G_h1 = tf.nn.relu(tf.matmul(x, G_W1) + G_b1)\n",
@@ -278,19 +278,19 @@
     "\n",
     "\n",
     "def discriminator(x, isTrain=True):\n",
-    "    with tf.variable_scope('discriminator', reuse=tf.AUTO_REUSE):  # (-1, 32, 32,, 32, 1)\n",
+    "    with tf.variable_scope('discriminator', reuse=tf.AUTO_REUSE):  \n",
     "        # 1st hidden layer\n",
     "        conv1 = tf.layers.conv1d(x, 128, [4], strides=(2), padding='same', use_bias=False\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 16, 16, 16, 128)\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "        lrelu1 = tf.nn.elu(conv1)\n",
     "        # 2nd hidden layer\n",
     "        conv2 = tf.layers.conv1d(lrelu1, 256, [4], strides=(2), padding='same', use_bias=False\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 8, 8, 8, 256)\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "        lrelu2 = tf.nn.elu(tf.layers.batch_normalization(conv2, training=isTrain))\n",
     "\n",
     "        # 3rd hidden layer\n",
     "        conv3 = tf.layers.conv1d(lrelu2, 512, [4], strides=(2), padding='same', use_bias=False\n",
-    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  # (-1, 4, 4, 4, 512)\n",
+    "                                 , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
     "        lrelu3 = tf.nn.elu(tf.layers.batch_normalization(conv3, training=isTrain))\n",
     "\n",
     "        # output layer\n",
@@ -331,10 +331,7 @@
    ],
    "source": [
     "# variables : input\n",
-    "# x_image = tf.placeholder(tf.float32, shape=(None, 64, 64, 1))\n",
-    "# n_input_3d = tf.reshape(n_input, (-1, 3, 3))\n",
     "\n",
-    "# x_3D = tf.placeholder(tf.float32, shape=(None, n_input, 1))\n",
     "x_1D = tf.placeholder(tf.float32, shape=(None, n_input, 1))\n",
     "\n",
     "keep_prob = tf.placeholder(dtype=tf.float32)\n",
@@ -346,7 +343,6 @@
     "# z = tf.reshape(z, (-1, 1, n_latent))\n",
     "\n",
     "# networks : generator\n",
-    "# z = tf.placeholder(tf.float32, shape=[None, n_latent]) # inialized vector of 100 noises\n",
     "G_z = generator(z, isTrain)\n",
     "\n",
     "# # networks : discriminator\n",
@@ -429,27 +425,6 @@
     "if os.path.isdir(model_path) is False:\n",
     "    os.mkdir(model_path)\n",
     "saver = tf.train.Saver()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 276048)\n",
-      "(10, 276048, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x_1d in thingi.batchmaker(batch_size=batch_size, normalize=True, flat=True, pad_length=n_input, filenames=False):\n",
-    "    print(x_1d.shape)\n",
-    "    y = x_1d.reshape([-1, n_input, 1])\n",
-    "    print(y.shape)"
    ]
   },
   {
