preparing voxel code

--- a/notebooks/1D-VAE-GAN_ch.ipynb
+++ b/notebooks/1D-VAE-GAN_ch.ipynb
@@ -213,48 +213,46 @@
     "\n",
     "        return z, z_mu, z_sig\n",
     "    \n",
-    "#     # should use transpose for generator? CNN not working\n",
-    "# def generator(x, isTrain=True):\n",
-    "#     with tf.variable_scope('generator', reuse=tf.AUTO_REUSE):\n",
-    "#         # 1st hidden layer\n",
-    "#         conv1 = tf.layers.conv1d(x, 256, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
-    "#         lrelu1 = tf.nn.elu(tf.layers.batch_normalization(conv1, training=isTrain))\n",
+    "    # should use transpose for generator? CNN not working\n",
+    "def generator(x, isTrain=True):\n",
+    "    with tf.variable_scope('generator', reuse=tf.AUTO_REUSE):\n",
+    "        # 1st hidden layer\n",
+    "        conv1 = tf.layers.conv1d(x, 256, [2], strides=1, padding='same', use_bias=False\n",
+    "                                           , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
+    "        lrelu1 = tf.nn.elu(tf.layers.batch_normalization(conv1, training=isTrain))\n",
     "\n",
-    "#         # 2nd hidden layer\n",
-    "#         conv2 = tf.layers.conv1d(lrelu1, 128, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer()) \n",
-    "#         lrelu2 = tf.nn.elu(tf.layers.batch_normalization(conv2, training=isTrain))\n",
+    "        # 2nd hidden layer\n",
+    "        conv2 = tf.layers.conv1d(lrelu1, 128, [2], strides=1, padding='same', use_bias=False\n",
+    "                                           , kernel_initializer=tf.contrib.layers.xavier_initializer()) \n",
+    "        lrelu2 = tf.nn.elu(tf.layers.batch_normalization(conv2, training=isTrain))\n",
     "\n",
-    "#         # 3rd hidden layer\n",
-    "#         conv3 = tf.layers.conv1d(lrelu2, 64, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
-    "#         lrelu3 = tf.nn.elu(tf.layers.batch_normalization(conv3, training=isTrain))\n",
-    "\n",
-    "#         # 4th hidden layer\n",
-    "#         conv4 = tf.layers.conv1d(lrelu3, 32, [2], strides=1, padding='same', use_bias=False\n",
-    "#                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
-    "#         lrelu4 = tf.nn.elu(tf.layers.batch_normalization(conv4, training=isTrain))\n",
-    "\n",
-    "#         # output layer\n",
-    "# #         conv5 = tf.layers.conv1d(lrelu4, 1, [2], strides=1, padding='valid', use_bias=False\n",
-    "# #                                            , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
-    "# #         o = tf.nn.tanh(conv5)\n",
-    "#         o = tf.nn.tanh(lrelu4)\n",
+    "        # 3rd hidden layer\n",
+    "        conv3 = tf.layers.conv1d(lrelu2, 64, [2], strides=1, padding='same', use_bias=False\n",
+    "                                           , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
+    "        lrelu3 = tf.nn.elu(tf.layers.batch_normalization(conv3, training=isTrain))\n",
+    "         # 4th hidden layer\n",
+    "        conv4 = tf.layers.conv1d(lrelu3, 32, [2], strides=1, padding='same', use_bias=False\n",
+    "                                           , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
+    "        lrelu4 = tf.nn.elu(tf.layers.batch_normalization(conv4, training=isTrain))\n",
+    "        # output layer\n",
+    "        conv5 = tf.layers.conv1d(lrelu4, 1, [2], strides=1, padding='valid', use_bias=False\n",
+    "                                           , kernel_initializer=tf.contrib.layers.xavier_initializer())  \n",
+    "        o = tf.nn.tanh(conv5)\n",
+    "        o = tf.nn.tanh(lrelu4)\n",
     "        \n",
-    "#         print(\"conv1 shape: \",conv1.shape)\n",
-    "#         print(\"lrelu1 shape: \",lrelu1.shape)\n",
-    "#         print(\"conv2 shape: \",conv2.shape)\n",
-    "#         print(\"lrelu2 shape: \",lrelu2.shape)\n",
-    "#         print(\"conv3 shape: \",conv3.shape)\n",
-    "#         print(\"lrelu3 shape: \",lrelu3.shape)\n",
-    "#         print(\"conv4 shape: \",conv4.shape)\n",
-    "#         print(\"lrelu4 shape: \",lrelu4.shape)\n",
-    "# #         print(\"conv5 shape: \",conv5.shape)\n",
-    "#         print(\"x shape: \", x.shape)\n",
-    "#         print(\"output shape: \", o.shape)\n",
+    "        print(\"conv1 shape: \",conv1.shape)\n",
+    "        print(\"lrelu1 shape: \",lrelu1.shape)\n",
+    "        print(\"conv2 shape: \",conv2.shape)\n",
+    "        print(\"lrelu2 shape: \",lrelu2.shape)\n",
+    "        print(\"conv3 shape: \",conv3.shape)\n",
+    "        print(\"lrelu3 shape: \",lrelu3.shape)\n",
+    "        print(\"conv4 shape: \",conv4.shape)\n",
+    "        print(\"lrelu4 shape: \",lrelu4.shape)\n",
+    "        print(\"conv5 shape: \",conv5.shape)\n",
+    "        print(\"x shape: \", x.shape)\n",
+    "        print(\"output shape: \", o.shape)\n",
     "\n",
-    "#         return o\n",
+    "        return o\n",
     "\n",
     "def generator(x, isTrain=True):\n",
     "    with tf.variable_scope('generator', reuse=tf.AUTO_REUSE):\n",
