--- a/notebooks/3D-VAE-GAN_ch.ipynb
+++ b/notebooks/3D-VAE-GAN_ch.ipynb
@@ -604,9 +604,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".3d-form",
    "language": "python",
-   "name": "python3"
+   "name": ".3d-form"
   },
   "language_info": {
    "codemirror_mode": {
