thingi10k now supports voxels

--- a/notebooks/3D-VAE-GAN_ch.ipynb
+++ b/notebooks/3D-VAE-GAN_ch.ipynb
@@ -38,6 +38,8 @@
     "import matplotlib.gridspec as gridspec\n",
     "\n",
     "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "np.random.seed(0)\n",
     "tf.set_random_seed(0)"
@@ -70,7 +72,6 @@
     "# import data\n",
     "import env\n",
     "from data.thingi10k import Thingi10k\n",
-    "from data import THINGI10K_INDEX\n",
     "from data.stl import save_vectors_as_stl\n",
     "from data.stl import plot_mesh\n",
     "\n",
@@ -81,35 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n_samples: 10\n",
-      "n_input: 276048\n",
-      "size: 110419200 bytes\n",
-      "size: 0.10 gb\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<data.binvox_rw.Voxels at 0x7f521d95b208>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# some models are quite large and cause this architecture to hit a memory error\n",
-    "# also tensors cannot be greater than 2 GB!\n",
-    "# to calculate size in bytes of tensor, take size of architecture layer * vector length * 4\n",
+    "# preprocessing... making sure the voxels are available\n",
+    "for batch in thingi.voxels_batchmaker(10):\n",
+    "    break\n",
     "\n",
-    "#n_input = 90000  # multiple of 9!! vertices come in 3! any less and you're cutting off vital info\n",
-    "n_input = thingi.max_length()\n",
     "\n",
-    "print('n_samples: {}'.format(n_samples))\n",
-    "print('n_input: {}'.format(n_input))\n",
-    "size_bytes = n_input * 100 * 4\n",
-    "print('size: {} bytes'.format(size_bytes))\n",
-    "size_gb = size_bytes / 1024 / 1024 / 1024\n",
-    "print('size: {:.2f} gb'.format(size_bytes / 1024 / 1024 / 1024))\n",
-    "assert size_gb < 2"
+    "batch[0]"
    ]
   },
   {
@@ -121,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
